--- a/MvcTestInGit/WebApplication2/Web.config
+++ b/MvcTestInGit/WebApplication2/Web.config
@@ -10,6 +10,14 @@
   </configSections>
   <connectionStrings>
     <add name="MovieDbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=Movies;Persist Security Info=True;User ID=test;Password=123456" />
+  
+
+<!--<add name="MovieDBContext" 
+   connectionString="Data Source=(LocalDB)\v13.0;AttachDbFilename=|DataDirectory|\Movies.mdf;Integrated Security=True" 
+   providerName="System.Data.SqlClient" 
+/>-->
+
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
