--- a/MvcTestInGit/WebApplication2/Web.config
+++ b/MvcTestInGit/WebApplication2/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MovieDbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=Movies;Persist Security Info=True;User ID=test;Password=123456" />
+    <add name="MovieDbContext" providerName="System.Data.SqlClient" connectionString="Data Source=127.0.0.1;Initial Catalog=Movies;Persist Security Info=True;User ID=test;Password=123456" />
   
 
 <!--<add name="MovieDBContext" 
