--- a/MvcTestInGit/WebApplication2/WebApplication2.csproj
+++ b/MvcTestInGit/WebApplication2/WebApplication2.csproj
@@ -173,7 +173,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -195,6 +197,9 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Movies2\Index.cshtml" />
     <Content Include="Views\Director\Index.cshtml" />
+    <Content Include="Views\Director\Create.cshtml" />
+    <Content Include="Views\Director\Edit.cshtml" />
+    <Content Include="Views\Director\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
