--- a/MvcTestInGit/WebApplication2/WebApplication2.csproj
+++ b/MvcTestInGit/WebApplication2/WebApplication2.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\MovieDbContext.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
