--- a/MvcTestInGit/WebApplication4/Web.config
+++ b/MvcTestInGit/WebApplication4/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="WebApplication4.Models.UserDiarDb" providerName="System.Data.Client" connectionString="Data Source=.;Initial Catalogo=UserDiary;Uid=test;Pwd=123456"/>
-  </connectionStrings>
+    <add name="WebApplication4.Models.UserDiaryDb" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=UserDiary;Persist Security Info=True;User ID=test;Password=123456" />
+  <add name="DiaryEntities" connectionString="metadata=res://*/Models.Test.Model1.csdl|res://*/Models.Test.Model1.ssdl|res://*/Models.Test.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC-20180930GKYO;initial catalog=Diary;user id=test;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
