--- a/MvcTestInGit/DIary.Data/packages.config
+++ b/MvcTestInGit/DIary.Data/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Tgnet" version="1.6.30.181127" targetFramework="net452" />
+  <package id="Tgnet.Data.Entity" version="2.1.8.170214" targetFramework="net452" />
 </packages>
