--- a/MvcTestInGit/Diary.Service/packages.config
+++ b/MvcTestInGit/Diary.Service/packages.config
@@ -2,4 +2,11 @@
 <packages>
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="6.0.0.0" targetFramework="net452" />
+  <package id="Ninject" version="3.0.0.0" targetFramework="net452" />
+  <package id="Tgnet" version="1.6.30.181127" targetFramework="net452" />
+  <package id="Tgnet.Api" version="2.2.3.180904" targetFramework="net452" />
+  <package id="Tgnet.Data.Entity" version="2.1.8.170214" targetFramework="net452" />
+  <package id="Tgnet.ServiceModel" version="1.0.0" targetFramework="net452" />
+  <package id="Tgnet.Web" version="2.0.0.1" targetFramework="net452" />
 </packages>
