--- a/MvcTestInGit/WebApplication4/packages.config
+++ b/MvcTestInGit/WebApplication4/packages.config
@@ -2,8 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
-  <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.30225.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
@@ -20,6 +19,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Ninject" version="3.0.0.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="Tgnet" version="1.6.30.181127" targetFramework="net461" />
+  <package id="Tgnet.Web" version="2.2.4.170324" targetFramework="net461" />
+  <package id="Tgnet.Web.Mvc" version="3.2.2.180605" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
